crates/lexeme/tests/ui/extra_variant_attr.stderr
error: duplicate attribute
 --> tests/ui/extra_variant_attr.rs:6:14
  |
6 |     #[lexeme("[a-zA-Z][a-zA-Z0-9]*")]
  |              ^^^^^^^^^^^^^^^^^^^^^^
